@@ -13,7 +13,7 @@ Verilator 5.033 devel
 
 **Major:**
 
-* Add expression coverage (#5719). [Todd Strader]
+* Add expression coverage (#4677) (#5719). [Todd Strader]
 
 **Minor:**
 
@@ -56,6 +56,7 @@ Verilator 5.033 devel
 * Fix VFileContent reference count (#5769) (#5771). [Dave Sargeant]
 * Fix ignoring joins in stringify in preprocessor (#5777). [Krzysztof Bieganski, Antmicro Ltd.]
 * Fix unpacked split_var (#5782) (#5785). [Yutetsu TAKATSUKASA]
+* Fix time import error on time parameters (#5786). [Luca Colagrande]
 * Fix matching language extension options including dots.
 
 
